--- a/src/main/java/io/github/jinlongliao/patcher2/PatcherDialog.form
+++ b/src/main/java/io/github/jinlongliao/patcher2/PatcherDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.ldx.PatcherDialog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="io.github.jinlongliao.patcher2.PatcherDialog">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="10" bottom="10" right="10"/>
     <constraints>
@@ -91,7 +91,7 @@
             <properties>
               <model>
                 <item value="Class"/>
-                <item value="Java"/>
+                <item value="File"/>
               </model>
             </properties>
           </component>
@@ -166,7 +166,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="e0556" class="javax.swing.JLabel" binding="pathcerTitle">
+          <component id="e0556" class="javax.swing.JLabel" binding="patcherTitle">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -175,7 +175,7 @@
               <icon value="nodes/class.png"/>
               <labelFor value=""/>
               <text value="Create Patcher Dialog"/>
-              <toolTipText value="DongXing"/>
+              <toolTipText value="Pathcher2"/>
             </properties>
           </component>
         </children>
